# face_rec_api

./: .gitignore  Dockerfile.jetson  Dockerfile.rknn  README.md  TESTING.md  models  pyproject.toml  requirements.txt  start_standalone.sh
hailort-4.21.0/: hailort-pcie-driver_4.21.0_all.deb
models/hailo/: arcface_mobilefacenet.hef
scripts/: batch_process.py
src/: app.py  config.py  face_pipeline.py  photo_processor.py  utils.py  vector_store.py
src/backends/: __init__.py  base.py  hailo.py  rknn.py  tensorrt.py
tools/: build_engine.sh  build_int8_calib.md  build_rknn.py  build_rknn_calib.sh  download_insightface.sh
