[project]
name = "standalone-face-api"
version = "1.1.0"
description = "Standalone face recognition service with pluggable backends (Hailo / Jetson / RKNN)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0.post1",
    "pydantic==2.5.0",
    "numpy==1.26.2",
    "opencv-python==4.8.1.78",
    "scikit-image==0.22.0",
    "pytest==7.4.3",
    "httpx==0.25.2",
    "pytest-dependency",
]

# Hardware backends are optional — install only the one matching your device.
# Examples:
#   uv sync --extra hailo    # Raspberry Pi 5 + Hailo-8
#   uv sync --extra jetson   # NVIDIA Jetson (P1, not yet implemented)
#   uv sync --extra rknn     # Rockchip RK3576/RK3588 (P2, not yet implemented)
[project.optional-dependencies]
hailo = ["hailort"]
jetson = []
rknn = []

[tool.uv.sources]
hailort = { path = "hailort-4.21.0-cp311-cp311-linux_aarch64.whl" }

# Hailo Runtime Dependencies
# ==========================
# For Hailo backend: HailoRT must be installed. Use `uv sync --extra hailo`,
# which pulls the bundled `hailort-4.21.0-cp311-cp311-linux_aarch64.whl`.
# This wheel only works on aarch64 Linux (e.g. Raspberry Pi 5).
